# RAG_MODEL

./: .env  README.md  pyproject.toml  requirements.txt
chat/: chat.py
indexing/: index_docs.py
